# LO17

./: .gitignore  README.md  TD03.ipynb  app.py  evaluation.ipynb  processing.ipynb  pyproject.toml  querying.ipynb  td1.ipynb  test.ipynb
data/: replacement.csv
data/backup/: TD03.ipynb  app.py  beautiful_test.py  correcteur.py  index_builder.py  interactive_lemmatizer.py  orchestrator.py  queryv2.py  requetes.py  verif.py
data/backup/scripts/: traitement_requetes.py  traitement_requetes_unit.py
index/: __init__.py  main3.py  main4.py
index/clients/: __init__.py  bs4_parser.py  corpus_client.py
index/clients/base/: process_client.py
index/nlp/: __init__.py  index_builder.py  interactive_lemmatizer.py  nlp_tools.py  orchestrator.py
index/scripts/: traitement_requetes.py  traitement_requetes_llm.py  traitement_requetes_llm2.py  traitement_requetes_llm3.py
index/transactions/: __init__.py  _xml_base_model.py  corpus.py  document.py  query.py
index/transactions/base/: base_corpus.py  base_document.py  base_query.py  corpus_document.py  inverted_index.py  xml_base_model.py
index/transactions/corpus_modules/: indexing.py  post_processing.py
index/transactions/modules/: indexing.py  metrics.py  nlp.py  post_processing.py
index/transactions/scripts/: correction.py  date_converter.py  get_spacy.py  inverted_index.py  nlp.py  query_parser.py  token_metrics.py
output/: anti_dictionnaire.txt  corpus_initial.xml  segmentation.tsv
scripts/: main3.py  verif.py
tests/: traitement_queries.py  traitement_requetes_unit.py
