[project]
name = "lo17"
version = "0.1.0"
description = "LO17 projects"
authors = [
    {name = "Raph",email = "94909118+Ryustiel@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
