[project]
name = "lo17"
version = "0.1.0"
description = "LO17 projects"
authors = [
    {name = "Raph",email = "94909118+Ryustiel@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "spacy (>=3.8.4,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "pip>=25.1.1",
    "streamlit>=1.45.0",
    "langchain-openai>=0.3.16",
    "openai>=1.78.1",
    "python-dotenv>=1.1.0",
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.3",
]
